@@ -395,9 +395,9 @@
                   </li>
                   <li>
                     <img
-                      src="assets/img/logo/iau.jpg"
+                      src="assets/img/logo/padc.png"
                       class="img-responsive"
-                      alt="IAU logo"
+                      alt="PADC logo"
                     />
                   </li>
                 </ul>
