@@ -1,12 +1,3 @@
-/* ==================================================
-//  ____  _     _   _            _   _          _____ _
-// |  _ \(_)___| |_(_)_ __   ___| |_(_)_   ____|_   _| |__   ___ _ __ ___   ___  ___
-// | | | | / __| __| | '_ \ / __| __| \ \ / / _ \| | | '_ \ / _ \ '_ ` _ \ / _ \/ __|
-// | |_| | \__ \ |_| | | | | (__| |_| |\ V /  __/| | | | | |  __/ | | | | |  __/\__ \
-// |____/|_|___/\__|_|_| |_|\___|\__|_| \_/ \___||_| |_| |_|\___|_| |_| |_|\___||___/
-//
-/* ================================================*/
-
 /*-----------------------------------------------------------------------------------*/
 /*  DOCUMENT READY
 /*-----------------------------------------------------------------------------------*/
