@@ -1,4 +1,14 @@
-### Fix comma in setup.py (HEAD -> main)
+### Remove IAU logo Add PADC logo (HEAD -> main)
+>Tue, 7 Jun 2022 11:23:35 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix comma in setup.py (origin/main, origin/HEAD)
 >Mon, 9 May 2022 15:56:17 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix missing logo (origin/main, origin/HEAD)
+### Fix missing logo
 >Mon, 9 May 2022 15:52:16 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
